--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,5 +21,5 @@ menu:
       name: "/home/lab"
       url: /lab/
     - identifier: posts
-      name: "var/logs"
+      name: "/var/logs"
       url: /posts/
